fix: pos checkout button color on dark mode (#45967)

--- a/erpnext/public/scss/point-of-sale.scss
+++ b/erpnext/public/scss/point-of-sale.scss
@@ -526,8 +526,7 @@
 
 					> .checkout-btn {
 						@extend .primary-action;
-						background-color: var(--blue-200);
-						color: white;
+						background-color: var(--control-bg);
 					}
 
 					> .edit-cart-btn {
@@ -769,8 +768,8 @@
 
 		.submit-order-btn {
 			@extend .primary-action;
-			background-color: var(--primary-color);
-			color: white;
+			background-color: var(--btn-primary);
+			color: var(--neutral);
 		}
 
 		.section-label {
